chunk and message css tuned. overflow issue solved with width calculation subtracting the button width for it to work with a row(combination of percentage and px). Currently testing the full retrieval flow - need to set up the switch viz

--- a/pyllments/payloads/chunk/css/collapsible_view_markdown.css
+++ b/pyllments/payloads/chunk/css/collapsible_view_markdown.css
@@ -1,5 +1,6 @@
 :host {
-    line-height: 1.3
+    line-height: 1.3;
+    width: calc(100% - 55px);
 }
 
 :host p {
